--- a/Midia/Views/Base.lproj/Main.storyboard
+++ b/Midia/Views/Base.lproj/Main.storyboard
@@ -16,29 +16,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Aja-3w-7rK">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Aja-3w-7rK">
                                 <rect key="frame" x="0.0" y="44" width="414" height="852"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XKC-9T-K1s">
-                                    <size key="itemSize" width="50" height="50"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XKC-9T-K1s">
+                                    <size key="itemSize" width="150" height="200"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="15" minY="15" maxX="15" maxY="15"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="6hR-e1-Ys7">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="6hR-e1-Ys7" customClass="MediaCollectionViewCell" customModule="Midia" customModuleProvider="target">
+                                        <rect key="frame" x="15" y="15" width="150" height="200"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="vSV-6Y-6Xj">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pfa-Iu-zju">
+                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="170"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tew-Eb-6J7">
+                                                    <rect key="frame" x="8" y="170" width="134" height="30"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="tew-Eb-6J7" secondAttribute="trailing" constant="8" id="1Bm-97-UmB"/>
+                                                <constraint firstAttribute="trailing" secondItem="Pfa-Iu-zju" secondAttribute="trailing" id="38Q-oU-Pfc"/>
+                                                <constraint firstAttribute="bottom" secondItem="Pfa-Iu-zju" secondAttribute="bottom" constant="30" id="ESM-KG-CRv"/>
+                                                <constraint firstItem="Pfa-Iu-zju" firstAttribute="leading" secondItem="vSV-6Y-6Xj" secondAttribute="leading" id="ISk-he-afq"/>
+                                                <constraint firstItem="tew-Eb-6J7" firstAttribute="leading" secondItem="vSV-6Y-6Xj" secondAttribute="leading" constant="8" id="Kp3-4G-Lwg"/>
+                                                <constraint firstAttribute="bottom" secondItem="tew-Eb-6J7" secondAttribute="bottom" id="XMn-pI-dOp"/>
+                                                <constraint firstItem="tew-Eb-6J7" firstAttribute="top" secondItem="Pfa-Iu-zju" secondAttribute="bottom" id="XlF-Z9-4My"/>
+                                                <constraint firstItem="Pfa-Iu-zju" firstAttribute="top" secondItem="vSV-6Y-6Xj" secondAttribute="top" id="dC3-cD-7wD"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
+                                        <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <outlet property="imageView" destination="vSV-6Y-6Xj" id="4Xc-eg-V8B"/>
+                                            <outlet property="titleLabel" destination="tew-Eb-6J7" id="T8X-og-vaC"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="Aja-3w-7rK" secondAttribute="bottom" id="Msz-9e-YTi"/>
+                            <constraint firstItem="Aja-3w-7rK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="UQm-8C-Yhz"/>
+                            <constraint firstItem="Aja-3w-7rK" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="W74-jF-1pA"/>
+                            <constraint firstItem="Aja-3w-7rK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="h6f-Gt-QOt"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
