Implemented view controller states, sync view with current state using wilSet

--- a/Midia/Views/Base.lproj/Main.storyboard
+++ b/Midia/Views/Base.lproj/Main.storyboard
@@ -72,13 +72,23 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mje-Ts-VAU">
+                                <rect key="frame" x="15" y="487" width="384" height="20"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="mje-Ts-VAU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Aqe-eD-Gdl"/>
                             <constraint firstItem="A6z-l2-EH0" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="MXC-hB-jzc"/>
                             <constraint firstAttribute="bottom" secondItem="Aja-3w-7rK" secondAttribute="bottom" id="Msz-9e-YTi"/>
+                            <constraint firstItem="mje-Ts-VAU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="P4v-zp-zTe"/>
                             <constraint firstItem="Aja-3w-7rK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="UQm-8C-Yhz"/>
                             <constraint firstItem="Aja-3w-7rK" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="W74-jF-1pA"/>
+                            <constraint firstItem="mje-Ts-VAU" firstAttribute="top" secondItem="GkX-7S-cm2" secondAttribute="bottom" constant="10" id="Y5f-gY-zrK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mje-Ts-VAU" secondAttribute="trailing" constant="15" id="Zb0-ED-mhe"/>
                             <constraint firstItem="GkX-7S-cm2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="b1k-O2-AHE"/>
                             <constraint firstItem="Aja-3w-7rK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="h6f-Gt-QOt"/>
                             <constraint firstItem="GkX-7S-cm2" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="jn3-dt-9E5"/>
@@ -90,6 +100,7 @@
                         <outlet property="activityIndicatorView" destination="A6z-l2-EH0" id="bUD-2f-yhz"/>
                         <outlet property="collectionView" destination="Aja-3w-7rK" id="xta-Nr-f2e"/>
                         <outlet property="failureEmojiLabel" destination="GkX-7S-cm2" id="Vqh-Jr-rpa"/>
+                        <outlet property="statusLabel" destination="mje-Ts-VAU" id="jmv-ua-dLl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
