--- a/Midia/Views/Detail.storyboard
+++ b/Midia/Views/Detail.storyboard
@@ -90,8 +90,8 @@
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rGx-mF-QQt" userLabel="Date Label">
                                         <rect key="frame" x="0.0" y="90" width="232" height="45"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X4d-OU-ixe" userLabel="Buy Button">
@@ -114,15 +114,16 @@
                                     <constraint firstItem="0BU-2v-KoP" firstAttribute="centerX" secondItem="j2P-VJ-5aU" secondAttribute="centerX" id="ifn-IT-Tla"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xrg-I3-S0V" userLabel="Close Button">
-                                <rect key="frame" x="16" y="52" width="50" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xrg-I3-S0V" userLabel="Close Button">
+                                <rect key="frame" x="348" y="52" width="50" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="2oI-og-0TY"/>
                                     <constraint firstAttribute="width" constant="50" id="V7w-b5-8wQ"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" image="xmark.circle.fill" catalog="system">
-                                    <attributedString key="attributedTitle"/>
+                                <state key="normal" title="Close">
+                                    <color key="titleColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="didTapCloseButton:" destination="JvS-lG-Sap" eventType="touchUpInside" id="m2d-SK-Gbr"/>
@@ -136,11 +137,11 @@
                             <constraint firstItem="FYM-Pa-Z9T" firstAttribute="top" secondItem="4RA-Hr-vJ9" secondAttribute="bottom" constant="10" id="AeK-iK-Mhr"/>
                             <constraint firstItem="4RA-Hr-vJ9" firstAttribute="top" secondItem="vXg-wZ-D22" secondAttribute="bottom" constant="8" id="Cl8-lL-8Od"/>
                             <constraint firstItem="FYM-Pa-Z9T" firstAttribute="leading" secondItem="UFa-j8-yiI" secondAttribute="leading" constant="16" id="Fzc-Qo-SR2"/>
-                            <constraint firstItem="Xrg-I3-S0V" firstAttribute="leading" secondItem="UFa-j8-yiI" secondAttribute="leading" constant="16" id="K1N-Ny-mah"/>
                             <constraint firstItem="UFa-j8-yiI" firstAttribute="trailing" secondItem="s8d-T8-nfM" secondAttribute="trailing" constant="16" id="L0n-Yn-EiP"/>
                             <constraint firstItem="FYM-Pa-Z9T" firstAttribute="top" secondItem="s8d-T8-nfM" secondAttribute="bottom" constant="10" id="M4N-ms-Adj"/>
                             <constraint firstItem="Xrg-I3-S0V" firstAttribute="top" secondItem="UFa-j8-yiI" secondAttribute="top" constant="8" id="O0e-gK-Udx"/>
                             <constraint firstItem="0Vw-0q-A9b" firstAttribute="centerX" secondItem="BOV-Ag-MCa" secondAttribute="centerX" id="OJ0-82-yBj"/>
+                            <constraint firstItem="UFa-j8-yiI" firstAttribute="trailing" secondItem="Xrg-I3-S0V" secondAttribute="trailing" constant="16" id="OYi-er-OiT"/>
                             <constraint firstItem="s8d-T8-nfM" firstAttribute="top" secondItem="vXg-wZ-D22" secondAttribute="bottom" constant="8" id="VXa-h2-3wt"/>
                             <constraint firstItem="vXg-wZ-D22" firstAttribute="top" secondItem="Xrg-I3-S0V" secondAttribute="bottom" id="WT8-Rs-XES"/>
                             <constraint firstItem="j2P-VJ-5aU" firstAttribute="top" secondItem="Xrg-I3-S0V" secondAttribute="bottom" id="Xrm-IA-LLM"/>
@@ -175,6 +176,5 @@
     </scenes>
     <resources>
         <image name="placeholder" width="500" height="500"/>
-        <image name="xmark.circle.fill" catalog="system" width="64" height="60"/>
     </resources>
 </document>
